2007-12-26  Eric S. Raymond  <esr@snark.thyrsus.com>

	* log-view.el: Add Subversion and Mercurial log format samples.

2007-12-26  Andreas Schwab  <schwab@suse.de>

	* font-lock.el (save-buffer-state): Make sure the state of the
	buffer is always restored.

2007-12-26  Jay Belanger  <jay.p.belanger@gmail.com>

	* calc/calc.el (calc-lang-allow-percentsigns): New variable.

	* calc/calc-lang.el (calc-lang-allow-percentsigns): Declare as
	a variable.

	* calc/calccomp.el (math-to-percentsigns): New function.
	(math-compose-var): Handle variables with percent signs.
	(math-compose-expr): Handle function names with percent signs.

	* calc/calc-aent.el (math-to-percentsigns): Declare as function.
	(math-read-exprs): Handle percent signs in languages that
	allow them.
	(math-restore-underscores): Remove function.
	(math-remove-percentsigns, math-restore-placeholders):
	New functions.

2007-12-26  Vinicius Jose Latorre  <viniciusjl@ig.com.br>

	* ps-print.el (ps-print-preprint-region): Use `region-active-p' instead
	`mark' for error checking.

2007-12-26  Tassilo Horn  <tassilo@member.fsf.org>

	* image-mode.el (image-bookmark-make-cell, image-bookmark-jump):
	New functions.
	(image-mode): Set bookmark-make-cell-function appropriately.

	* doc-view.el (doc-view-bookmark-jump): Correct misspelled arg
	name.

	* bookmark.el (bookmark-make-cell-function): New variable.
	(bookmark-make): Call bookmark-make-cell-function's function
	instead of bookmark-make-cell.
	(bookmark-get-handler, bookmark-jump-internal): New functions.
	(bookmark-jump, bookmark-jump-other-window, bookmark-insert)
	(bookmark-bmenu-2-window, bookmark-bmenu-other-window): Use
	bookmark-jump-internal.
	(bookmark-make-cell-for-text-file): Renamed from
	bookmark-make-cell.

	* doc-view.el (doc-view-bookmark-make-cell)
	(doc-view-bookmark-jump): New functions.
	(doc-view-mode): Set bookmark-make-cell-function buffer-locally.

2007-12-25  Miles Bader  <miles@gnu.org>
